# plg_editorjs_button

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-package.yml
src/plugins/plg_editorjs_button/: __init__.py  admin.py  manifest.json  renderer.py
src/plugins/plg_editorjs_button/i18n/cs_CZ/: plg_editorjs_button.json
src/plugins/plg_editorjs_button/i18n/en_GB/: plg_editorjs_button.json
src/plugins/plg_editorjs_button/static/: button-link.js  frontend.css
tests/: conftest.py  test_button.py
